# django_mysite_20

./: Dockerfile  divices.csv  not_a_virus.txt  orders.csv  pyproject.toml  requirements.txt  textfile.txt
mysite/: log.txt  newtext.txt
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: create_article.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_details.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about_me.html  hello.html  login.html  (+4 more)
mysite/mysite/: asgi.py  settings.py  urls.py  wsgi.py
mysite/requestdataapp/: forms.py  midddlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: groups-fixture.json  orders-fixture.json  products-fixture.json  user-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_alter_product_discount.py  0003_product_created_by.py  0004_alter_product_archived.py  0005_order_receipt.py  0006_product_preview.py  0007_productimages.py  0008_alter_product_preview.py  0009_alter_order_options_alter_product_options_and_more.py  0010_alter_product_descriptions_alter_product_name.py
(+25 files in other folders)
